syntax = "proto3";

package auth;


service AuthService {
  rpc login (UserCredentials) returns (UserAccess);
  rpc validateToken (Token) returns (ValidUser);
}


message UserCredentials {
  string username = 1;
  string password = 2;
}

message UserAccess {
  string accessToken = 1;
}


message Token {
  string token = 1;
}

message ValidUser {
  bool valid = 1;
  string userId = 2;
  string role = 3;
}


